--- a/index.html
+++ b/index.html
@@ -108,10 +108,6 @@
             box-shadow: 0 -1px 0.5rem 0.1px rgba(159, 159, 159, 0.961);
         }
 
-        .content {
-            padding: 16px;
-        }
-
         .Photography {
             float: left;
             overflow: hidden;
@@ -119,7 +115,7 @@
 
         .Photography .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 16px;
+            font-size: 17px;
             padding: 17.5px 6px;
             color: #fff;
             background: inherit;
@@ -167,16 +163,18 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(42, 48, 113, 0.759);
+            background-color: rgba(33, 41, 132, 0.652);
             color: #fff;
-            border-radius: 0.5rem;
-            transition: 0.25s ease;
+            border-radius: 1.5rem;
+            transition: 0.2s linear;
         }
+
         .Photography:hover .Photography-content {
             display: grid;
-            grid-template-columns: 0.5fr 0.5fr;
-            justify-content: space-between;
+            grid-template-columns: 1fr 1fr;
+            justify-content: center;
             justify-items: center;
+            padding: 5px;
             width: 33%;
         }
 
@@ -236,17 +234,18 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(42, 48, 113, 0.759);
+            background-color: rgba(33, 41, 132, 0.652);
             color: #fff;
-            border-radius: 0.5rem;
-            transition: 0.25s ease;
+            border-radius: 1.5rem;
+            transition: 0.2s linear;
         }
 
         .Sport:hover .Sport-content {
             display: grid;
-            grid-template-columns: 0.5fr 0.5fr;
-            justify-content: space-between;
+            grid-template-columns: 1fr 1fr;
+            justify-content: center;
             justify-items: center;
+            padding: 5px;
             width: 22%;
         }
 
@@ -257,7 +256,7 @@
 
         .Education .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 16px;
+            font-size: 17px;
             padding: 17.5px 6px;
             color: #fff;
             background: inherit;
@@ -306,17 +305,18 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(42, 48, 113, 0.759);
+            background-color: rgba(33, 41, 132, 0.652);
             color: #fff;
-            border-radius: 0.5rem;
-            transition: 0.25s ease;
+            border-radius: 1.5rem;
+            transition: 0.2s linear;
         }
 
         .Education:hover .Education-content {
             display: grid;
-            grid-template-columns: 0.5fr 0.5fr;
-            justify-content: space-between;
+            grid-template-columns: 1fr 1fr;
+            justify-content: center;
             justify-items: center;
+            padding: 5px;
             width: 25%;
         }
 
@@ -327,7 +327,7 @@
 
         .Promoter .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 16px;
+            font-size: 17px;
             padding: 17.5px 6px;
             color: #fff;
             background: inherit;
@@ -376,17 +376,18 @@
             width: 121px;
             height: 45px;
             text-align: center;
-            background-color: rgba(42, 48, 113, 0.759);
+            background-color: rgba(33, 41, 132, 0.652);
             color: #fff;
-            border-radius: 0.5rem;
-            transition: 0.25s ease;
+            border-radius: 1.5rem;
+            transition: 0.2s linear;
         }
 
         .Promoter:hover .Promoter-content {
             display: grid;
-            grid-template-columns: 1fr;
+            grid-template-columns: 1fr 1fr;
             justify-content: center;
             justify-items: center;
+            padding: 5px;
             width: 9.55%;
         }
 
@@ -397,7 +398,7 @@
 
         .Contact .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 16px;
+            font-size: 17px;
             padding: 17.5px 6px;
             color: #fff;
             background: inherit;
@@ -447,18 +448,19 @@
             width: 121px;
             height: 45px;
             text-align: center;
-            background-color: rgba(42, 48, 113, 0.759);
+            background-color: rgba(33, 41, 132, 0.652);
             color: #fff;
-            border-radius: 0.5rem;
-            transition: 0.25s ease;
+            border-radius: 1.5rem;
+            transition: 0.2s linear;
         }
 
         .Contact:hover .Contact-content {
             display: grid;
-            grid-template-columns: 1fr;
+            grid-template-columns: 1fr 1fr;
             justify-content: center;
             justify-items: center;
-            width: 125px;
+            padding: 5px;
+            width: 10%;
         }
 
         .Community {
@@ -468,7 +470,7 @@
 
         .Community .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 16px;
+            font-size: 17px;
             padding: 17.5px 6px;
             color: #fff;
             background: inherit;
@@ -517,17 +519,18 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(42, 48, 113, 0.759);
+            background-color: rgba(33, 41, 132, 0.652);
             color: #fff;
-            border-radius: 0.5rem;
-            transition: 0.25s ease;
+            border-radius: 1.5rem;
+            transition: 0.2s linear;
         }
         
         .Community:hover .Community-content {
             display: grid;
-            grid-template-columns: 0.5fr 0.5fr;
-            justify-content: space-between;
+            grid-template-columns: 1fr 1fr;
+            justify-content: center;
             justify-items: center;
+            padding: 5px;
             width: 39%;
         }
 
@@ -538,7 +541,7 @@
 
         .TikiYiki .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 16px;
+            font-size: 17px;
             padding: 17.5px 6px;
             color: #fff;
             background: inherit;
@@ -589,20 +592,22 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(42, 48, 113, 0.759);
+            background-color: rgba(33, 41, 132, 0.652);
             color: #fff;
-            border-radius: 0.5rem;
-            transition: 0.25s ease;
+            border-radius: 1.5rem;
+            transition: 0.2s linear;
+            justify-content: center;
+            align-items: center;
+            border: none;
         }
 
-        .TikiYiki:hover .TikiYiki-content {
+        .TikiYiki:hover .TikiYiki-content{
             display: grid;
-            grid-template-columns: 0.5fr 0.5fr;
-            justify-content: space-between;
+            grid-template-columns: 1fr 1fr;
+            justify-content: center;
             justify-items: center;
-            column-gap: normal;
             padding: 5px;
-            width: 26%;
+            width: 25%;
         }
 
         .Disability {
@@ -612,7 +617,7 @@
 
         .Disability .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 16px;
+            font-size: 17px;
             padding: 17.5px 6px;
             color: #fff;
             background: inherit;
@@ -654,24 +659,25 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 36px;
+            line-height: 37px;
         }
 
         .Disability:hover .Disability-content:hover a:hover{
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(42, 48, 113, 0.759);
+            background-color: rgba(33, 41, 132, 0.652);
             color: #fff;
-            border-radius: 0.5rem;
-            transition: 0.25s ease;
+            border-radius: 1.5rem;
+            transition: 0.2s linear;
         }
 
         .Disability:hover .Disability-content {
             display: grid;
-            grid-template-columns: 0.5fr 0.5fr;
+            grid-template-columns: 1fr 1fr;
             justify-content: center;
             justify-items: center;
+            padding: 5px;;
             width: 37%;
         }
 
