--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             color: rgb(64, 114, 195);
             padding: 9.45px 14px;
             text-decoration: none;
-            display: block;
+            display: grid;
             text-align: left;
         }
 
@@ -218,7 +218,7 @@
             color: rgb(64, 114, 195);
             padding: 9.45px 14px;
             text-decoration: none;
-            display: block;
+            display: grid;
             text-align: left;
         }
 
@@ -289,7 +289,7 @@
             color: rgb(64, 114, 195);
             padding: 9.45px 14px;
             text-decoration: none;
-            display: block;
+            display: grid;
             text-align: left;
         }
 
@@ -360,7 +360,7 @@
             color: rgb(64, 114, 195);
             padding: 9.45px 14px;
             text-decoration: none;
-            display: block;
+            display: grid;
             text-align: left;
         }
 
@@ -432,7 +432,7 @@
             color: rgb(64, 114, 195);
             padding: 9.45px 14px;
             text-decoration: none;
-            display: block;
+            display: grid;
             text-align: left;
         }
 
@@ -503,7 +503,7 @@
             color: rgb(64, 114, 195);
             padding: 9.45px 14px;
             text-decoration: none;
-            display: block;
+            display: grid;
             text-align: left;
         }
 
@@ -576,7 +576,7 @@
             color: rgb(64, 114, 195);
             padding: 9.45px 14px;
             text-decoration: none;
-            display: block;
+            display: grid;
             text-align: left;
         }
 
@@ -650,7 +650,7 @@
             color: rgb(64, 114, 195);
             padding: 9.45px 14px;
             text-decoration: none;
-            display: block;
+            display: grid;
             text-align: left;
         }
 
@@ -1033,7 +1033,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background-color: rgba(244, 244, 244, 0.579);
+            background-color: rgba(229, 229, 229, 0.579);
             justify-content: center;
             align-items: center;
         }
@@ -1058,7 +1058,7 @@
             justify-items: center;
             width: 14%;
             height: 5800px;
-            background-color: rgba(253, 253, 253, 0.979);
+            background-color: rgba(255, 255, 255, 0.979);
             border: 1px solid rgb(253, 253, 253);
             border-left: 1.5px solid #605f5f7c;
             border-top: 3px solid rgb(255, 27, 19);
@@ -2566,7 +2566,7 @@ height: auto;
             column-gap: 5px;
             justify-content: space-between;
             justify-items: center;
-            background-color: rgba(242, 242, 242, 0.515);
+            background-color: rgba(252, 252, 252, 0.515);
             width: 84%;
             height: 600px;
             font-family: 'georgia';
@@ -2579,7 +2579,7 @@ height: auto;
             padding-bottom: 5px;
             padding-right: 5px;
             padding-top: 5px;
-            border-bottom: 0.4rem solid #000;
+            border-bottom: 0.4rem solid #5a5a5a8b;
             box-shadow: 0 1px 0.15rem 0 rgb(40, 155, 236);
             margin-bottom: 1rem;
         }
@@ -2606,7 +2606,7 @@ height: auto;
         }
 
         .content9:hover {
-            box-shadow: 0px -1px 0.4rem 0.5px rgba(203, 203, 203, 0.675);
+            box-shadow: 0 1px 0.15rem 0 rgb(40, 155, 236);
             transition: 0.25s linear;
             padding: 5px;
             background-color: #fafafa;
@@ -2690,7 +2690,7 @@ height: auto;
 .Burki-pics0{
     display: grid;
     grid-template-columns: 0.5fr 1fr;
-    column-gap: 0.9rem;
+    column-gap: 0.1rem;
     padding: 10px;
     color: rgba(105, 105, 105, 0.751);
     font-family: 'Kanit';
