--- a/index.html
+++ b/index.html
@@ -2682,7 +2682,7 @@ height: auto;
     width: 100%;
     height: auto;
     padding: 10px;
-    background: rgba(228, 228, 228, 0.701);
+    background: rgba(208, 207, 207, 0.871);
     margin-top: 1rem;
     margin-bottom: 1.5rem;
 }
@@ -2780,7 +2780,8 @@ height: auto;
     text-align: left;
     width: 85.5%;
     height: auto;
-    box-shadow: 0 0 0.15rem 0 rgba(72, 172, 244, 0.828);
+    box-shadow: 0 0.3px 0.17rem 0.2px rgba(28, 127, 197, 0.986)
+
 }
 
 .Bu-pics1{
