--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(41, 54, 151, 0.682);
+            background-color: rgba(54, 68, 170, 0.586);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
@@ -234,7 +234,7 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(41, 54, 151, 0.682);
+            background-color: rgba(54, 68, 170, 0.586);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
@@ -305,7 +305,7 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(41, 54, 151, 0.682);
+            background-color: rgba(54, 68, 170, 0.586);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
@@ -376,7 +376,7 @@
             width: 121px;
             height: 45px;
             text-align: center;
-            background-color: rgba(41, 54, 151, 0.682);
+            background-color: rgba(54, 68, 170, 0.586);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
@@ -448,7 +448,7 @@
             width: 121px;
             height: 45px;
             text-align: center;
-            background-color: rgba(41, 54, 151, 0.682);
+            background-color: rgba(54, 68, 170, 0.586);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
@@ -519,7 +519,7 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(41, 54, 151, 0.682);
+            background-color: rgba(54, 68, 170, 0.586);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
@@ -592,7 +592,7 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(41, 54, 151, 0.682);
+            background-color: rgba(54, 68, 170, 0.586);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
@@ -666,7 +666,7 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(41, 54, 151, 0.682);
+            background-color: rgba(54, 68, 170, 0.586);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
@@ -5067,10 +5067,10 @@ function showSlides(n) {
     <div class="Bu-pics1">
 
         <div class="BP1">
-    <h2 style="font-size: 20px"> 1. Disabilities And Inclusion</h2> 
+    <h2> 1. Disabilities And Inclusion</h2> 
     <p> <br>
-        One of the most simplistic and probable way to measure the level of INCLUSION is first to observe what is happening in terms of social interactions and conversations between people of the area. How people (non disabled and disabled ones) are behaving between themselves in communicating, advicing and helping each other or how vulnerable people like elders and disabled people are treated ? Do the non-disabled people interact with disabled people in person, by postal or virtual channels (phone, internet) or other ways ? Then the answers could drive to an idea and may stand as first index to learn and understand more about inclusion. But something is clear, for any living community, the existence of connections with commnunications between people, is a huge vector to get the community vibrant and moving ahead in cohesion. So there maybe a set of social rules to define how communities are organised to govern. Leaders of communities have to work hars to keep the commnunity safe.
-      Many members whant to build a family and raise children then having a good life and social interactions. They should respect their communities rules. At the same time people talking to each other, giving respect to neighbours, being in solidarity with those in need, behaving like social normal rules do recommand, is imperative to keep the harmony in the commuinities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value but inclusive too because every human-being matters and is part of the community. It is how things should work. it is a way to continue in building a strong and inclusive community. The exercise of observation can be easier ou difficult but is feasable by anyone even it can take a time to make a conclusion. 
+        One of the most simplistic and probable way to measure the level of INCLUSION in an area is first to make observations about what is happening in terms of social conversations between people of the area. How people (non disabled and disabled ones) are interacting between themselves in communicating, helping, supporting each other, how vulnerable people like elders and disabled people are included and treated ? Do and how non-disabled people interact with disabled people in person, by postal or virtual channels (phone, internet) or other ways ? Then the answers could drive to an idea and may stand as first index to learn and understand more about how inclusion is dealt there. But something is clear, for any living community, the existence of connections with commnunications between people, supporting each-others-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to govern. Leaders of communities have to work hard to keep the commnunity safe in its entirety.
+      Many members whant to build a family and raise children then having a good life and social interactions. They should respect their communities rules. At the same time people talking to each other, giving respect to neighbours, being in solidarity with those in need, behaving like social normal rules do recommand, is imperative to the harmony in the commuinities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value and inclusive because every human-being matters. It is how things should work in every community. it is a way to continue in building a strong and inclusive community. The exercise of observation can be easier ou difficult but is feasable by anyone even it can take a time to make a conclusion. 
         The fact to be able to observe, idealize and summurize some causes of exclusion or inclusion is important. It's also a good beginning but no everyone can do it without a volunteering and objective mind. A good observer should make a special analysis about conversations between non-disabled and disabled people because it uses to be unfamiliar. It is some kind of interactions between people of difference and the rest of the society that will more highlight the level of Inclusion in the community. What constant and consistent those interactions are ? Can they impact positively the processus of inclusion for disabled people ? How disability is generally perceived in African countries especially in Burkina Faso, Niger or Mali all of them in the Sahel region of West Africa and where violent terrorism is barbarically murdering lots innocent people ?
         <br>
        
