--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
+  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
 }
 
         .Photography-content a {
@@ -163,10 +163,13 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(54, 68, 170, 0.586);
+            background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
+            justify-content: center;
+            align-items: center;
+            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .Photography:hover .Photography-content {
@@ -209,7 +212,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
+  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
    }
 
         .Sport-content a {
@@ -234,10 +237,13 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(54, 68, 170, 0.586);
+            background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
+            justify-content: center;
+            align-items: center;
+            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .Sport:hover .Sport-content {
@@ -280,7 +286,7 @@
   height: 155px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
+  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
    }
 
         .Education-content a {
@@ -305,10 +311,13 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(54, 68, 170, 0.586);
+            background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
+            justify-content: center;
+            align-items: center;
+            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .Education:hover .Education-content {
@@ -351,7 +360,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
+  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
     }
 
         .Promoter-content a {
@@ -376,10 +385,13 @@
             width: 121px;
             height: 45px;
             text-align: center;
-            background-color: rgba(54, 68, 170, 0.586);
+            background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
+            justify-content: center;
+            align-items: center;
+            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .Promoter:hover .Promoter-content {
@@ -422,7 +434,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
+  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
  }
 
         .Contact-content a {
@@ -448,10 +460,13 @@
             width: 121px;
             height: 45px;
             text-align: center;
-            background-color: rgba(54, 68, 170, 0.586);
+            background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
+            justify-content: center;
+            align-items: center;
+            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .Contact:hover .Contact-content {
@@ -494,7 +509,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
+  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
    } 
 
         .Community-content a {
@@ -519,10 +534,13 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(54, 68, 170, 0.586);
+            background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
+            justify-content: center;
+            align-items: center;
+            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
         
         .Community:hover .Community-content {
@@ -567,7 +585,7 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
+  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
    }
 
         .TikiYiki-content a {
@@ -592,13 +610,13 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(54, 68, 170, 0.586);
+            background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
             justify-content: center;
             align-items: center;
-            border: none;
+            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .TikiYiki:hover .TikiYiki-content{
@@ -641,7 +659,7 @@
   height: 158px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
+  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
   }
 
         .Disability-content a {
@@ -666,10 +684,13 @@
             width: auto;
             height: 50px;
             text-align: center;
-            background-color: rgba(54, 68, 170, 0.586);
+            background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
             transition: 0.2s linear;
+            justify-content: center;
+            align-items: center;
+            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .Disability:hover .Disability-content {
@@ -2793,9 +2814,9 @@ height: auto;
     width: 100%;
     height: auto;
     padding: 5px;
-    font-family: 'Kanit';
+    font-family:'Times New Roman', Times, serif;
     line-height: 19px;
-    font-size: 14.25px;
+    font-size: 15.45px;
     background: #fff;
     color: rgba(66, 66, 66, 0.832);
 }
@@ -5068,10 +5089,13 @@ function showSlides(n) {
 
         <div class="BP1">
     <h2> 1. Disabilities And Inclusion</h2> 
-    <p> <br>
-        One of the most simplistic and probable way to measure the level of INCLUSION in an area is first to make observations about what is happening in terms of social conversations between people of the area. How people (non disabled and disabled ones) are interacting between themselves in communicating, helping, supporting each other, how vulnerable people like elders and disabled people are included and treated ? Do and how non-disabled people interact with disabled people in person, by postal or virtual channels (phone, internet) or other ways ? Then the answers could drive to an idea and may stand as first index to learn and understand more about how inclusion is dealt there. But something is clear, for any living community, the existence of connections with commnunications between people, supporting each-others-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to govern. Leaders of communities have to work hard to keep the commnunity safe in its entirety.
-      Many members whant to build a family and raise children then having a good life and social interactions. They should respect their communities rules. At the same time people talking to each other, giving respect to neighbours, being in solidarity with those in need, behaving like social normal rules do recommand, is imperative to the harmony in the commuinities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value and inclusive because every human-being matters. It is how things should work in every community. it is a way to continue in building a strong and inclusive community. The exercise of observation can be easier ou difficult but is feasable by anyone even it can take a time to make a conclusion. 
-        The fact to be able to observe, idealize and summurize some causes of exclusion or inclusion is important. It's also a good beginning but no everyone can do it without a volunteering and objective mind. A good observer should make a special analysis about conversations between non-disabled and disabled people because it uses to be unfamiliar. It is some kind of interactions between people of difference and the rest of the society that will more highlight the level of Inclusion in the community. What constant and consistent those interactions are ? Can they impact positively the processus of inclusion for disabled people ? How disability is generally perceived in African countries especially in Burkina Faso, Niger or Mali all of them in the Sahel region of West Africa and where violent terrorism is barbarically murdering lots innocent people ?
+    <p> 
+        <br>
+        <h6>[DEFINITION OF INCLUSION HERE] </h6>
+        <br>
+        One of the most simplistic and probable way to measure the level of INCLUSION in an area is first to observe what is happening there in terms of social interactions between people. How people interactions are seeming like ? Interactions and conversations between themselves through communicating, helping and/or supporting each other ? How vulnerable people like elders, people with difference and disabled people are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? Then collecting these informations and compilate them in order to get a general view about INCLUSION in the chosen area. Probably the answers will emphasize an idea and basic index to more learn and understand more about how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections with comnunications between people, supporting each-other-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to govern. Leaders of communities have to work hard to keep the commnunity safe in its entirety.
+      Many members whant to build a family and raise children then having a good life and social interactions. They should respect their communities rules. At the same time talking to each other, giving respect to neighbours, being in solidarity with those in need, behaving like social normal rules do recommand, is imperative for harmony in the communities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value and inclusive because every human-being matters. It is how things should work in every community. it is a way to continue in building a strong and inclusive community. The exercise of observation can be easier ou difficult but is feasable by anyone even it can take a time to make a conclusion. 
+        The fact to be able to observe, idealize and summurize some causes of exclusion or inclusion is important. It's also a good beginning but no everyone can do it without a volunteering and objective mind. A good observer should make a special analysis about conversations between non-disabled and disabled people because it uses to be unfamiliar. It is some kind of interactions between people of difference and the rest of the society that will more highlight the level of Inclusion in the community. What constant and consistent those interactions are ? Can they impact positively the processus of inclusion for disabled people ? How disability is generally perceived in African countries especially in Burkina Faso, Niger or Mali all of them in the Sahel region of West Africa ?
         <br>
        
  It's obvious the existence of a little difference of development between the cited countries, the matters and issues tied to disabled people are approximatelly the same in Africa in terms of how people are living better or not with their disabilities. What are the feelings of disabled people about their rights? The main focus is to dig deep into many subjects and concerns and getting tools to understand why there is a continual and discriminative specter of wrongdoing towards people with difference. What matters is the possibility of having more people to make substancial approaches and ideas of what it means disability and how disabled people are dealing with it on a daily basis. 
