--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
+  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
 }
 
         .Photography-content a {
@@ -212,7 +212,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
+  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
    }
 
         .Sport-content a {
@@ -286,7 +286,7 @@
   height: 155px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
+  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
    }
 
         .Education-content a {
@@ -360,7 +360,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
+  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
     }
 
         .Promoter-content a {
@@ -434,7 +434,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
+  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
  }
 
         .Contact-content a {
@@ -509,7 +509,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
+  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
    } 
 
         .Community-content a {
@@ -585,7 +585,7 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
+  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
    }
 
         .TikiYiki-content a {
@@ -659,7 +659,7 @@
   height: 158px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 0.5px 0.2rem 0.5px rgb(46, 114, 223);
+  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
   }
 
         .Disability-content a {
@@ -1054,7 +1054,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background-color: rgba(229, 229, 229, 0.579);
+            background-color: rgba(222, 222, 222, 0.538);
             justify-content: center;
             align-items: center;
         }
@@ -1290,7 +1290,7 @@
             border-top-left-radius: 0.5rem;
             padding-top: 20px;
             padding-bottom: 20px;
-            margin-top: 4%;
+            margin-top: 4.5%;
             box-shadow: 0 0 0.15rem 0 rgb(40, 155, 236);
         }
 
@@ -2654,7 +2654,7 @@ height: auto;
 
         .BURKINAFASO{
             display: grid;
-            grid-template-rows: 0.5fr 1fr;
+            grid-template-rows: 0.15fr 0.45fr;
             column-gap: 2rem;
             justify-content: center;
             justify-items: center;
@@ -3859,9 +3859,10 @@ background: #717171;
             width: 84%;
             background-color: #ffffffec;
             color: #000;
-            margin-top: 5rem;
-            border-radius: 0.5rem;
-            box-shadow: 0 0 0.15rem 0 rgb(40, 155, 236);
+            margin-top: 2rem;
+            border-bottom-right-radius: 0.5rem;
+            border-bottom-left-radius: 0.5rem;
+            box-shadow: 0 0 0.15rem 0 rgb(36, 135, 206);
         }
 
         .TOPE{
@@ -4845,10 +4846,10 @@ function showSlides(n) {
                 </div>
 
                 <div class="FASOTITLE">
-                <p><b><em style="font-family: 'Kanit'; color: rgb(214, 41, 18);">Burkina Faso</em>, the land of integrity, a landlocked and low-income Sub-Saharan African country with limited natural resources, is administratively structured of <em style="font-family: 'Kanit'; color:green">45 provinces </em>and nested within the heart of <em style="font-family: 'Kanit'; color:rgb(214, 41, 18)">West Africa</em>. Burkina Faso was a former colony of France from which it gained (took) independence in August 5th, 1960. 
+                <p><b><em style="font-family: 'Kanit'; color: rgb(214, 41, 18);">Burkina Faso</em>, the land of integrity, a landlocked and low-income Sub-Saharan African country with limited natural resources, is administratively structured of <em style="font-family: 'Kanit'; color:green">45 provinces </em>and nested within <em style="font-family: 'Kanit'; color:rgb(214, 41, 18)">West Africa</em>. Burkina Faso was a former colony of France from which it gained (took) independence in August 5th, 1960. 
                     <em style="font-family: 'Kanit'; color: rgb(214, 41, 18)">Its capital and main city is Ouagadougou</em> which population is heightened about 1.086.505 people in the city area. The global <em style="font-family: 'Kanit'; color:green;"> population of Burkina Faso is approximatively equal to 23 300 000 inhabitants</em> with a dominant percentage of youth. Geography influences Economy. The economy of Burkina Faso is mostly based on
                 agriculture, livestock breeding, mining, market gardening. The informal
-                sector is growing and believed to create more jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé but no a plural mark with 'S' even if it is at least two inhabitants.  
+                sector is growing and believed to create more jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé but without a plural mark as 'S'. These are by an aphabetical order the 45 provinces of Burkina Faso:
                 </b>    
             </p>            
             </div>
@@ -5091,14 +5092,36 @@ function showSlides(n) {
     <h2> 1. Disabilities And Inclusion</h2> 
     <p> 
         <br>
-        <h6>[DEFINITION OF INCLUSION HERE] </h6>
+        <b style="font-size: 11.2px; font-family: 'helvetica';">Inclusion is the act of including someone or something as part of a group, list, etc., or a person or thing that is included.
+            <br>Examples:<br>
+            <em>1. She is being considered for inclusion in the Olympic team.
+            <br>
+            2. Inclusion of The book's value stems from its inclusion of multiple viewpoints.
+            <br>
+            3. Two last-minute inclusions are Jim and Ahmed.
+            </em>
+        </b>
         <br>
-        One of the most simplistic and probable way to measure the level of INCLUSION in an area is first to observe what is happening there in terms of social interactions between people. How people interactions are seeming like ? Interactions and conversations between themselves through communicating, helping and/or supporting each other ? How vulnerable people like elders, people with difference and disabled people are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? Then collecting these informations and compilate them in order to get a general view about INCLUSION in the chosen area. Probably the answers will emphasize an idea and basic index to more learn and understand more about how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections with comnunications between people, supporting each-other-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to govern. Leaders of communities have to work hard to keep the commnunity safe in its entirety.
-      Many members whant to build a family and raise children then having a good life and social interactions. They should respect their communities rules. At the same time talking to each other, giving respect to neighbours, being in solidarity with those in need, behaving like social normal rules do recommand, is imperative for harmony in the communities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value and inclusive because every human-being matters. It is how things should work in every community. it is a way to continue in building a strong and inclusive community. The exercise of observation can be easier ou difficult but is feasable by anyone even it can take a time to make a conclusion. 
-        The fact to be able to observe, idealize and summurize some causes of exclusion or inclusion is important. It's also a good beginning but no everyone can do it without a volunteering and objective mind. A good observer should make a special analysis about conversations between non-disabled and disabled people because it uses to be unfamiliar. It is some kind of interactions between people of difference and the rest of the society that will more highlight the level of Inclusion in the community. What constant and consistent those interactions are ? Can they impact positively the processus of inclusion for disabled people ? How disability is generally perceived in African countries especially in Burkina Faso, Niger or Mali all of them in the Sahel region of West Africa ?
+-------------------------------------------------------------------------
+        <br>
+        One of the most simplistic instrument to measure the level of INCLUSION in an area is first to favor a way of observing how things are happening there in terms of social interactions between people. How are interactions seeming like ? Good ? Bad ? Mini ? What are the reasons ? Why and how interactions and conversations between people with communications, helping and supporting each other matters ? How vulnerable people like elders, people with difference are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
+        <br>
+        <br>
+        Collecting these informations and get them compilated through a deep and rational analyse in order to stick a general view about INCLUSION in the chosen community. Probably the answers will emphasize an idea and gives an index to more learn and understand about how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections with comnunications between people, supporting each-other-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to get governed. Leaders of communities have to work hard to keep the commnunity safe in its entirety.
+        <br>
+        <br>
+        Many members whant to build a family and raise children then having a good life and social interactions. They should respect their communities rules. At the same time talking to each other, giving respect to neighbours, being in solidarity with each other or especially those in need, behaving as social normal rules do recommand, is really imperative and worthy for harmony in the communities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value and inclusive because every human-being matters. It is how things should work in every community. It is a way to continue to building a strong and inclusive community. The exercise of observation can be easier ou difficult but is reachable by anyone even it may take a time to come to a conclusion. 
+        The fact to be able to observe, idealize and summurize some causes of exclusion or inclusion is important. 
+        
+        <br>
+        <br>
+        It's also a good beginning to get familiar to local inclusion trend but no everyone can do it without a volunteering and objective mind. A good observer should make a special analysis about conversations between non-disabled and disabled people because it uses to be unfamiliar. It is some kind of interactions between people of difference and the rest of the society that will more highlight the level of Inclusion in the community. What constant and consistent those interactions are ? Can they impact positively the processus of inclusion for disabled people ? How disability is generally perceived in African countries especially in Burkina Faso, Niger or Mali all of them in the Sahel region of West Africa ?
         <br>
        
- It's obvious the existence of a little difference of development between the cited countries, the matters and issues tied to disabled people are approximatelly the same in Africa in terms of how people are living better or not with their disabilities. What are the feelings of disabled people about their rights? The main focus is to dig deep into many subjects and concerns and getting tools to understand why there is a continual and discriminative specter of wrongdoing towards people with difference. What matters is the possibility of having more people to make substancial approaches and ideas of what it means disability and how disabled people are dealing with it on a daily basis. 
+ It's obvious the existence of a little difference of development between the cited countries, the matters and issues tied to disabled people are approximatelly the same in Africa in terms of how people are living better or not with their disabilities. What are the feelings of disabled people about their rights? 
+ <br>
+ <br>
+ The main focus is to dig deep into many subjects and concerns and getting tools to understand why there is a continual and discriminative specter of wrongdoing towards people with difference. What matters is the possibility of having more people to make substancial approaches and ideas of what it means disability and how disabled people are dealing with it on a daily basis. 
  <br>
  Using resources, methologies, analyses in order to bring to light many issues and try to figure them out. After the telling of stories and narratives, it is so important to interview both of a non-disabled and disabled people to get their own views about disability and inclusion.
 </p>
