--- a/index.html
+++ b/index.html
@@ -5092,7 +5092,7 @@ function showSlides(n) {
     <h2> 1. Disabilities And Inclusion</h2> 
     <p> 
         <br>
-        <b style="font-size: 11.2px; font-family: 'helvetica';">Inclusion is the act of including someone or something as part of a group, list, etc., or a person or thing that is included.
+        <b style="font-size: 11.2px; font-family: 'helvetica'; color:rgb(0, 140, 255);">Inclusion is the act of including someone or something as part of a group, list, etc., or a person or thing that is included.
             <br>Examples:<br>
             <em>1. She is being considered for inclusion in the Olympic team.
             <br>
@@ -6569,4 +6569,5 @@ function showSlides(n) {
 
 </body>
 
+</html>
 </html>
